--- a/Google_Search_Analysis.ipynb
+++ b/Google_Search_Analysis.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNM43D+D8IWi+TCxSC+ETbG",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNM43D+D8IWi+TCxSC+ETbG"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/tansugangopadhyay/Google-Search-Analysis/blob/main/Google_Search_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -46,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -92,7 +81,7 @@
       "metadata": {
         "id": "Ij-h9UGeFg09"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +100,7 @@
         "id": "d_Zs4Y8xF9Pg",
         "outputId": "3cf36876-9541-45b5-9c51-7d2ac58122a8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +139,7 @@
         "id": "i8tjh4DaF9H9",
         "outputId": "0b984b27-7958-44e3-e100-bbe1122f7bc6"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -187,7 +176,7 @@
         "id": "da4YQ5IjF8-U",
         "outputId": "927d0097-42b7-400c-cf5b-443a896f9e39"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
